test/files/neg/interop_erasuretags_arenot_manifests.scala
object Test extends App {
  def erasureTagIsnotManifest[T: ErasureTag] = {
    println(manifest[T])
  }

  erasureTagIsnotManifest[Int]
  erasureTagIsnotManifest[String]
  erasureTagIsnotManifest[Array[Int]]
}