test/files/neg/interop_erasuretags_arenot_manifests.check
interop_erasuretags_arenot_manifests.scala:3: error: No Manifest available for T.
    println(manifest[T])
                    ^
one error found
